product_docs/docs/efm/3.6/efm_user/08_controlling_efm_service.mdx
---
title: "Controlling the Failover Manager Service"
---

<div id="controlling_efm_service" class="registered_link"></div>

Each node in a Failover Manager cluster hosts a Failover Manager agent that is controlled by a service script. By default, the service script expects to find:

-   A configuration file named `efm.properties` that contains the properties used by the Failover Manager service. Each node of a replication scenario must contain a properties file that provides information about the node.
-   A cluster members file named `efm.nodes` that contains a list of the cluster members. Each node of a replication scenario must contain a cluster members list.

Note that if you are running multiple clusters on a single node you will need to manually create configuration files with cluster-specific names and modify the service script for the corresponding clusters.

The commands that control the Failover Manager service are platform-specific.

<div id="service_utility" class="registered_link"></div>

## Using the service Utility on RHEL 6.x and CentOS 6.x

On RHEL 6.x and CentOS 6.x, Failover Manager runs as a Linux service named (by default) efm-3.6 that is located in /etc/init.d. Each database cluster monitored by Failover Manager will run a copy of the service on each node of the replication cluster.

Use the following service commands to control a Failover Manager agent that resides on a RHEL 6.x or CentOS 6.x host:

`service efm-3.6 start`

> The start command starts the Failover Manager agent on the current node. The local Failover Manager agent monitors the local database and communicates with Failover Manager on the other nodes. You can start the nodes in a Failover Manager cluster in any order.
>
> This command must be invoked by root.

`service efm-3.6 stop`

> Stop the Failover Manager on the current node. This command must be invoked by root.

`service efm-3.6 status`

> The status command returns the status of the Failover Manager agent on which it is invoked. You can invoke the status command on any node to instruct Failover Manager to return status information. For example:
>
> \[[witness@localhost](mailto:witness@localhost) ~]# service efm-3.6 status efm-3.6 (pid 50836) is running...

`service efm-3.6 help`

> Display online help for the Failover Manager service script.

<div id="systemctl" class="registered_link"></div>

## Using the systemctl Utility on RHEL 7.x and CentOS 7.x

On RHEL 7.x and CentOS 7.x, Failover Manager runs as a Linux service named (by default) `efm-3.6.service` that is located in `/usr/lib/systemd/system`. Each database cluster monitored by Failover Manager will run a copy of the service on each node of the replication cluster.

Use the following systemctl commands to control a Failover Manager agent that resides on a RHEL 7.x or CentOS 7.x host:

`systemctl start efm-3.6`

> The start command starts the Failover Manager agent on the current node. The local Failover Manager agent monitors the local database and communicates with Failover Manager on the other nodes. You can start the nodes in a Failover Manager cluster in any order.
>
> This command must be invoked by root.

`systemctl stop efm-3.6`

> Stop the Failover Manager on the current node. This command must be invoked by root.

`systemctl status efm-3.6`

> The status command returns the status of the Failover Manager agent on which it is invoked. You can invoke the status command on any node to instruct Failover Manager to return status and server startup information.
>
> \[[root@ONE](mailto:root@ONE) ~]}> systemctl status efm-3.6  
> efm-3.6.service - EnterpriseDB Failover Manager 3.6  
> Loaded: loaded (/usr/lib/systemd/system/efm-3.6.service; disabled; vendor preset: disabled) Active: active (running) since Wed 2013-02-14 14:02:16 EST; 4s ago
>
> Process: 58125 ExecStart=/bin/bash -c /usr/edb/efm-3.6/bin/runefm.sh start ${CLUSTER} (code=exited, status=0/SUCCESS) Main PID: 58180 (java) CGroup: /system.slice/efm-3.6.service └─58180 /usr/lib/jvm/java-1.8.0-openjdk-1.8.0.161-0.b14.el7_4.x86_64/jre/bin/java -cp /usr/edb/efm-3.6/lib/EFM-3.6.0.jar -Xmx128m -agentlib:jdwp=transport...
